--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1 onclick="closemagnify()"><i class="fas fa-times"></i></h1>
         <div id="img_here"></div>
     </div>
-    <header id="header" class="animated slideInDown" style="animation-delay:1.8s;">
+    <header style="animation-delay: 1.8s; background: transparent; color: rgb(255, 255, 255); box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px; padding: 6vh 4vw;"">
         <table>
             <tr>
                 <td id="logo">Jun Shawn</td>
