--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <td id="logo">Jun Shawn</td>
                 <td id="navigation">
                     <a href="#work">作品集</a>
-                    <a href="#bio">關於我</a>
-                    <a href="">My Blog</a>
-                    <a href="#contact">與我聯絡</a>
+                    <a href="#bio">關於</a>
+                    <a href="">專長能力</a>
+                    <a href="#contact">聯絡我</a>
                 </td>
             </tr>
         </table>
@@ -50,11 +50,11 @@
         </tr>
     </table>
     <div id="work">
-        <h1>作品集</h1>
+        <h1>Work</h1>
 
     </div>
     <div id="bio">
-        <h1>關於我</h1>
+        <h1>About</h1>
         <h2>Jun Shawn</h2>
         <h3>經歷</h3>
         <ul>
@@ -71,10 +71,10 @@
         </p>
     </div>
     <div id ="abi">
-        <h1>專長領域</h1>
+        <h1>Ability</h1>
     </div>
     <div id="contact">
-        <h1>與我聯絡</h1>
+        <h1>Contact</h1>
             <table>
                 <tr>
                     <td>
