--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <button class="btn_one">與我聯繫</button><br>
                 <table>
                     <tr>
-                        <td href="https://www.facebook.com/changshawn19" class="animated zoomIn" style="animation-delay:2.2s;"><a class="social"><i class="fab fa-facebook"></i></a></td>
+                        <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://www.facebook.com/changshawn19"><i class="fab fa-facebook"></i></a></td>
                         <td href= "https://twitter.com/junshawn_" class="animated zoomIn" style="animation-delay:2.4s;"><a class="social"><i class="fab fa-twitter"></i></a></td>
                         <td href= "https://www.instagram.com/jschang19/" class="animated zoomIn" style="animation-delay:2.6s;"><a class="social"><i class="fab fa-instagram"></i></a></td>
                         <td href= "https://www.instagram.com/jschang19/" class="animated zoomIn" style="animation-delay:2.8s;"><a class="social"><i class="fab fa-dribbble"></i></a></td>
