--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Jun Shawn</title>
+    <title>工常張 Shawn</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -23,10 +23,10 @@
             <tr>
                 <td id="logo">Jun Shawn</td>
                 <td id="navigation">
-                    <a href="#work">作品集</a>
-                    <a href="#bio">關於</a>
-                    <a href="">專長能力</a>
-                    <a href="#contact">聯絡我</a>
+                    <a href="#work">Protfolio</a>
+                    <a href="#bio">About Me</a>
+                    <a href="#abi">Ability</a>
+                    <a href="#contact">Contact</a>
                 </td>
             </tr>
         </table>
@@ -41,8 +41,8 @@
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://www.facebook.com/changshawn19"><i class="fab fa-facebook"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social" href="https://twitter.com/junshawn_"><i class="fab fa-twitter"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.6s;"><a class="social" href= "https://www.instagram.com/jschang19/"><i class="fab fa-instagram"></i></a></td>
-                        <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social" href= "https://www.instagram.com/jschang19/"><i class="fab fa-dribbble"></i></a></td>
-                        <td class="animated zoomIn" style="animation-delay:3.0s;"><a class="social" href= "https://www.instagram.com/jschang19/"><i class="fab fa-medium"></i></a></td>
+                        <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social" href= "https://www.instagram.com/jschang19/"><i class="fab fa-apple"></i></a></td>
+                        <td class="animated zoomIn" style="animation-delay:3.0s;"><a class="social" href= "https://www.medium.com/jun-shawn"><i class="fab fa-medium"></i></a></td>
                     </tr>
                 </table>
             </td>
@@ -50,7 +50,7 @@
         </tr>
     </table>
     <div id="work">
-        <h1>Work</h1>
+        <h1>Protfolio</h1>
 
     </div>
     <div id="bio">
@@ -114,7 +114,7 @@
     </div>
     <div id="footer">
         &#60; Jun Shawn's Personal website. / &#62; <br>
-        POWER BY <a href="https://imfunniee.github.io">imfunniee</a>
+        TEMPLET BY <a href="https://imfunniee.github.io">imfunniee</a>
     </div>
     <script src="index.js" type="text/javascript"></script>
 </body>
