--- a/index.html
+++ b/index.html
@@ -35,13 +35,16 @@
         <tr>
             <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
                 <h1>成就不可能</h1>
+                <p>
+                    Student / Tech Editor /Coder
+                <p/>
                 <button class="btn_one">與我聯繫</button><br>
                 <table>
                     <tr>
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://www.facebook.com/changshawn19"><i class="fab fa-facebook"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social" href="https://twitter.com/junshawn_"><i class="fab fa-twitter"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.6s;"><a class="social" href= "https://www.instagram.com/jschang19/"><i class="fab fa-instagram"></i></a></td>
-                        <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social" href= "https://www.instagram.com/jschang19/"><i class="fab fa-apple"></i></a></td>
+                        <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social" href= "https://applealmond.com/"><i class="fab fa-apple"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:3.0s;"><a class="social" href= "https://www.medium.com/jun-shawn"><i class="fab fa-medium"></i></a></td>
                     </tr>
                 </table>
