--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <td id="logo">Jun Shawn</td>
                 <td id="navigation">
                     <a href="#work">Protfolio</a>
-                    <a href="#bio">About Me</a>
-                    <a href="#abi">Ability</a>
+                    <a href="#bio">About</a>
+                    <a href="#abi">Skill</a>
                     <a href="#contact">Contact</a>
                 </td>
             </tr>
@@ -36,9 +36,9 @@
             <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
                 <h1>成就不可能</h1>
                 <p>
-                    Student / Tech Editor /Coder
+                    Student / Tech Editor / Coder
                 <p/>
-                <button class="btn_one">與我聯繫</button><br>
+                <button onclick="window.open = 'mailto:kcshawn19@gmail.com'" class="btn_one">與我聯繫</button><br>
                 <table>
                     <tr>
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://www.facebook.com/changshawn19"><i class="fab fa-facebook"></i></a></td>
@@ -74,7 +74,7 @@
         </p>
     </div>
     <div id ="abi">
-        <h1>Ability</h1>
+        <h1>Skill</h1>
     </div>
     <div id="contact">
         <h1>Contact</h1>
