--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p>
                     Student / Tech Editor / Coder
                 <p/>
-                <button onclick="window.open = 'mailto:kcshawn19@gmail.com'" class="btn_one">與我聯繫</button><br>
+                <button onclick="window.location = 'mailto:kcshawn19@gmail.com'" class="btn_one">與我聯繫</button><br>
                 <table>
                     <tr>
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://www.facebook.com/changshawn19"><i class="fab fa-facebook"></i></a></td>
