--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <td id="navigation">
                     <a href="#work">Protfolio</a>
                     <a href="#bio">About</a>
-                    <a href="#abi">Skill</a>
+                    <a href="#skill">Skill</a>
                     <a href="#contact">Contact</a>
                 </td>
             </tr>
@@ -35,7 +35,7 @@
         <tr>
             <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
                 <h1>成就不可能</h1>
-                <div id = "description">
+                <div class = "description">
                     Student / Tech Editor / Coder
                 </div>
                 <button onclick="window.location = 'mailto:kcshawn19@gmail.com'" class="btn_one">與我聯繫</button><br>
@@ -73,7 +73,7 @@
             測試文字
         </p>
     </div>
-    <div id ="abi">
+    <div id ="skill">
         <h1>Skill</h1>
     </div>
     <div id="contact">
