--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <tr>
             <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
                 <h1>成就不可能</h1>
-                <div class = "description">
+                <p class = "description">
                     Student / Tech Editor / Coder
-                </div>
+                </p>
                 <button onclick="window.location = 'mailto:kcshawn19@gmail.com'" class="btn_one">與我聯繫</button><br>
                 <table>
                     <tr>
