--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
             </tr>
         </table>
     </header>
-    <div id="gotop">TOP</div>  
     <table id="top_part">
         <tr>
             <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
@@ -117,6 +116,7 @@
                 </tr>
             </table>
     </div>
+    <div class="gotop">TOP</div>
     <div id="footer">
         &#60; Jun Shawn's Personal website. / &#62; <br>
         TEMPLET BY <a href="https://imfunniee.github.io">imfunniee</a>
