--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
                 </tr>
             </table>
     </div>
-    <div class="gotop">TOP</div>
+    <a href="https://jschang19.github.io/website/#" id="gotop">
+        <i class="fa fa-angle-up"></i>
+     </a>
     <div id="footer">
         &#60; Jun Shawn's Personal website. / &#62; <br>
         TEMPLET BY <a href="https://imfunniee.github.io">imfunniee</a>
