--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h1 onclick="closemagnify()"><i class="fas fa-times"></i></h1>
         <div id="img_here"></div>
     </div>
+    <div id="gotop">^</div>  
     <header id="header" class="animated slideInDown" style="animation-delay:1.8s;">
         <table>
             <tr>
@@ -116,7 +117,6 @@
                 </tr>
             </table>
     </div>
-    <a href="https://jschang19.github.io/website/#" id="gotop">
         <i class="fa fa-angle-up"></i>
      </a>
     <div id="footer">
