--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <table id="top_part">
         <tr>
             <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
-                <h1>成就不可能</h1>
+                <h1>成就不可能 ! </h1>
                 <p id = "description">
                     Student / Tech Editor / Coder
                 </p>
