--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1 onclick="closemagnify()"><i class="fas fa-times"></i></h1>
         <div id="img_here"></div>
     </div>
-    <div id="gotop">^</div>  
+    <div id="gotop"><i class="fas fa-angle-up"></i></div>  
     <header id="header" class="animated slideInDown" style="animation-delay:1.8s;">
         <table>
             <tr>
