--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>工常張 Shawn</title>
+    <title>Jun Shawn - Tech Editor & Apple User</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js'/></script>
@@ -36,7 +36,7 @@
     <table id="top_part">
         <tr>
             <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
-                <h1>成就不可能 ! </h1>
+                <h1>Welcome,<br><span class="type">Tech Your Time.</span></h1>
                 <p id = "description">
                     Student / Tech Editor / Coder
                 </p>
@@ -56,7 +56,6 @@
     </table>
     <div id="work">
         <h1>Protfolio</h1>
-
     </div>
     <div id="bio">
         <h1>About</h1>
