--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
             <li>臉書社團 《 <a href="https://applealmond.com/" style="color:#1590fe" target= "_blank" >我們都是蘋果人</a> 》版主 （ 現有 20 萬名成員 ）</li>
             </ul>
         <hr width=25% align="left" +size=3 color=#2a2a2d style="border:1 dashed #2a2a2d">
-        <p>
-            測試文字
+        <p class="line">
+            Hi 我是 Shawn，是澎湖馬公高中的高二學生，也是個蘋果用戶，高一時發現自己對文字寫作頗擅長，加上對科技、3C 有興趣，開始成為部落客，撰寫各類蘋果產品的教學，與學生新課綱資訊，偶爾練練 Coding。
         </p>
-        <p>
-            <b>測試文字</b>
+       <p class="line"> 
+        目前在知名科技媒體 《蘋果仁》 擔任社群編輯，也在經營個人部落格《工常張 Shawn》，擁有一年多的網路寫作經驗，
         </p>
     </div>
     <div id ="skill">
