--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <a class="social"><i class="fab fa-facebook"></i></a>
-                                        <a class="social"><i class="fab fa-twitter"></i></a>
-                                        <a class="social"><i class="fab fa-instagram"></i></a>
+                                        <a class="social" href= "https://www.facebook.com/changshawn19" target=_blank ><i class="fab fa-facebook"></i></a>
+                                        <a class="social" href= "https://www.instagram.com/jschang19/" target=_blank><i class="fab fa-instagram"></i></a>
+                                        <a class="social" href= "https://applealmond.com/" target=_blank><i class="fab fa-apple"></i></a>
                                         <a class="social"><i class="fab fa-dribbble"></i></a>
                                         <a class="social"><i class="fab fa-medium"></i></a>
                                     </td>
