Update For icon hover

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     <tr>
                         <td class="animated zoomIn" style="animation-delay:2.2s;"><a class="social" href="https://www.facebook.com/changshawn19"><i class="fab fa-facebook"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:2.6s;"><a class="social" href= "https://www.instagram.com/jschang19/"><i class="fab fa-instagram"></i></a></td>
-                        <td class="animated zoomIn" style="animation-delay:2.8s;"><a class="social" href= "https://applealmond.com/"><i class="fab fa-apple"></i></a></td>
+                        <td class="animated zoomIn" style="animation-delay:2.8s;"><a id="social_apple" href= "https://applealmond.com/"><i class="fab fa-apple"></i></a></td>
                         <td class="animated zoomIn" style="animation-delay:3.0s;"><a class="social" href= "https://www.medium.com/jun-shawn"><i class="fab fa-medium"></i></a></td>
-                        <td class="animated zoomIn" style="animation-delay:2.4s;"><a class="social" href="https://twitter.com/junshawn_"><i class="fab fa-twitter"></i></a></td>
+                        <td class="animated zoomIn" style="animation-delay:2.4s;"><a id="social_twitter" href="https://twitter.com/junshawn_"><i class="fab fa-twitter"></i></a></td>
                     </tr>
                 </table>
             </td>
@@ -56,10 +56,16 @@
     </table>
     <div id="work">
         <h1>Protfolio</h1>
+        <p>
+            ddd
+        </p>
+        <p>
+            ggg
+        </p>
     </div>
     <div id="bio">
         <h1>About</h1>
-        <h2>Jun Shawn</h2>
+        <h2>關於 Jun Shawn</h2>
         <h3>經歷</h3>
         <ul>
             <li>科技媒體《 <a href="https://applealmond.com/" style="color:#1590fe" target= "_blank" >蘋果仁</a> 》 Instagram 編輯</li>
@@ -68,10 +74,10 @@
             </ul>
         <hr width=25% align="left" +size=3 color=#2a2a2d style="border:1 dashed #2a2a2d">
         <p class="line">
-            Hi 我是 Shawn，是澎湖馬公高中的高二學生，也是個蘋果用戶，高一時發現自己對文字寫作頗擅長，加上對科技、3C 有興趣，開始成為部落客，撰寫各類蘋果產品的教學，與學生新課綱資訊，偶爾練練 Coding。
+            Hi 我是 Shawn，是澎湖馬公高中的高二學生，也是個蘋果用戶，高一時發現自己喜歡寫作，加上對科技、3C 有興趣，開始成為部落客，撰寫蘋果產品的教學，與學生新課綱資訊，偶爾練練 Coding。
         </p>
        <p class="line"> 
-        目前在知名科技媒體 《蘋果仁》 擔任社群編輯，也在經營個人部落格《工常張 Shawn》，擁有一年多的網路寫作經驗，
+        目前在知名科技媒體 《蘋果仁》 擔任社群編輯，也經營個人部落格《工常張 Shawn》，擁有一年多的網路寫作經驗，瞭解 SEO 技術、3C 知識，並具備程式開發能力，本站最高有單月 78000 次不重複瀏覽量。
         </p>
     </div>
     <div id ="skill">
@@ -96,10 +102,10 @@
                                 <tr>
                                     <td>
                                         <a class="social"><i class="fab fa-facebook"></i></a>
-                                        <a class="social"><i class="fab fa-twitter"></i></a>
                                         <a class="social"><i class="fab fa-instagram"></i></a>
-                                        <a class="social"><i class="fab fa-dribbble"></i></a>
+                                        <a id="social_apple"><i class="fab fa-apple"></i></a>
                                         <a class="social"><i class="fab fa-medium"></i></a>
+                                        <a class="social"><i class="fab fa-twitter"></i></a>
                                     </td>
                                 </tr>
                             </table>
