--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
+    <!-- 
+    Author : @ 工常張Shawn
+    Last Upadte: 15:57, 11/21 , 2020
+    This's Shawn's personal website.
+    -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -68,15 +73,18 @@
         <h2>關於 Jun Shawn</h2>
         <h3>經歷</h3>
         <ul>
-            <li>科技媒體《 <a href="https://applealmond.com/" style="color:#1590fe" target= "_blank" >蘋果仁</a> 》 Instagram 編輯</li>
-            <li style="margin: 15px 0;">自媒體《 <a href="https://applealmond.com/" style="color:#1590fe" target= "_blank" >工常張Shawn</a> 》經營者</li>
-            <li>臉書社團 《 <a href="https://applealmond.com/" style="color:#1590fe" target= "_blank" >我們都是蘋果人</a> 》版主 （ 現有 20 萬名成員 ）</li>
-            </ul>
+            <li>科技媒體《 <a href="https://applealmond.com/" target= "_blank" >蘋果仁</a> 》 IG 編輯</li>
+            <li style="margin: 15px 0;">自媒體《 <a href="https://applealmond.com/" target= "_blank" >工常張Shawn</a> 》經營者</li>
+            <li>臉書社團 《 <a href="https://applealmond.com/" target= "_blank" >我們都是蘋果人</a> 》版主 <p>（ 現有 20 萬名成員 ）</p></li>
+        </ul>
         <hr width=25% align="left" +size=3 color=#2a2a2d style="border:1 dashed #2a2a2d">
-        <p class="line">
-            Hi 我是 Shawn，是澎湖馬公高中的高二學生，也是個蘋果用戶，高一時發現自己喜歡寫作，加上對科技、3C 有興趣，開始成為部落客，撰寫蘋果產品的教學，與學生新課綱資訊，偶爾練練 Coding。
+        <p class = "bio_content">
+            Hi 我是 Shawn，是澎湖馬公高中的高二學生，也是個蘋果用戶
         </p>
-       <p class="line"> 
+        <p class = "bio_content">   
+            高一時發現自己喜歡寫作，加上對科技、3C 有興趣，開始成為部落客，撰寫蘋果產品的教學，與學生新課綱資訊，偶爾練練 Coding。
+        </p>
+       <p class = "bio_content" > 
         目前在知名科技媒體 《蘋果仁》 擔任社群編輯，也經營個人部落格《工常張 Shawn》，擁有一年多的網路寫作經驗，瞭解 SEO 技術、3C 知識，並具備程式開發能力，本站最高有單月 78000 次不重複瀏覽量。
         </p>
     </div>
@@ -127,5 +135,6 @@
         TEMPLET BY <a href="https://imfunniee.github.io">imfunniee</a>
     </div>
     <script src="index.js" type="text/javascript"></script>
+    <!-- This is Jun Shawn,s personal web page, useing the templet from imfuniee. -->
 </body>
 </html>
