--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     This's Shawn's personal website.
     -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175637992-1"></script>    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QWQQHS1F5B"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-175637992-1');
+    gtag('config', 'G-QWQQHS1F5B');
     </script>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
