--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
     </table>
     <div id="work">
         <h1>Protfolio</h1>
-        <p>
+        <p class="pf_content">
             ddd
         </p>
-        <p>
+        <p class="pf_content">
             ggg
         </p>
     </div>
@@ -76,7 +76,7 @@
         <h1>About</h1>
         <h2>關於 Jun Shawn</h2>
         <h3>經歷</h3>
-        <ul>
+        <ul class="about_ul"> 
             <li>科技媒體《 <a href="https://applealmond.com/" target= "_blank" >蘋果仁</a> 》 IG 編輯</li>
             <li style="margin: 15px 0;">自媒體《 <a href="https://applealmond.com/" target= "_blank" >工常張Shawn</a> 》經營者</li>
             <li>臉書社團 《 <a href="https://applealmond.com/" target= "_blank" >我們都是蘋果人</a> 》版主 <p>（ 現有 20 萬名成員 ）</p></li>
